<resources>
    <string name="app_name">ProjetFinAnneeClientAND</string>

    <!-- Strings related to login -->
    <string name="prompt_email">User Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This Username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing Username
        completions."
    </string>
    <string name="title_activity_main">RAIL COMMANDER</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <!--__Search related Strings -->
    <string name="search_title">Search for your trip </string>
    <string name="departure_input">Departure town</string>
    <string name="arrival_input">Arrival town</string>
    <string name="search_button">Start Search !</string>


    <!-- Register related Strings -->
    <string name="Register_title">Register a new user</string>
    <string name="text_username">UserName</string>
    <string name="text_firstname">FirstName</string>
    <string name="text_lastname">LastName</string>
    <string name="text_age">Age</string>
    <string name="text_password">Password</string>
    <string name="text_register">Register</string>


    <!-- Pofile related Strings -->
    <string name="Pofile_title">User Profil</string>
    <string name="text_newusername">New User Name</string>
    <string name="text_oldusername">Old User Name</string>
    <string name="text_newfirstname">New First Name</string>
    <string name="text_oldfirstname">Old First Name</string>
    <string name="text_newname">New Name</string>
    <string name="text_newlastname">New Last Name</string>
    <string name="text_oldlastname">Old Last Name</string>
    <string name="text_newage">New Age</string>
    <string name="text_oldage">Old Age</string>
    <string name="text_newpassword">New Password</string>
    <string name="text_oldpassword">Old Password</string>
    <string name="text_buttom_savechange">Save Change</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Search related strings -->
    <string name="text_depart">Depart</string>
    <string name="text_destination">Destination</string>
    <string name="text_date">Date</string>
    <string name="text_time">Depart Time</string>
    <string name="bt_search">Search</string>
    <string name="bt_departTime">Depart Time</string>
    <string name="bt_arriveTime">Depart Time</string>
    <string name="bt_departDate">Depart Date</string>


</resources>
