<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="and3.supinfo.com.projetfinanneeclientand.SearchFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginTop="30dp"
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/depart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_depart"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/destination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_destination"
                    android:imeActionId="@+id/destination"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_marginTop="40dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.83">

                <TextView
                    android:layout_width="153dp"
                    android:layout_height="36dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/bt_departDate"
                    android:id="@+id/textView20" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:hint="21/12/16"
                    android:layout_weight="1"
                    android:id="@+id/tv_departDate"
                    android:gravity="center"
                    android:inputType="none"
                    android:textIsSelectable="true"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="153dp"
                    android:layout_height="38dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/bt_departTime"
                    android:id="@+id/textView21" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:hint="12:00"
                    android:id="@+id/tv_departTime"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:inputType="none"
                    android:textIsSelectable="true"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="153dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/bt_arriveTime"
                    android:id="@+id/textView22" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:hint="14:00"
                    android:layout_weight="0.95"
                    android:id="@+id/tv_arriveTime"
                    android:gravity="center"
                    android:inputType="none"
                    android:textIsSelectable="true"/>
            </LinearLayout>

            <Button
                android:id="@+id/bt_search"
                style="?android:textAppearanceSmall"
                android:layout_width="201dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/bt_search"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
